# llm-preferences

./: .gitignore  README.md  matplotlibrc.example  pyproject.toml
data/: tasks.csv  test.csv
data/results/: tasks-012_gpt-5-mini_1-task-per-option_free-form_2025-12-28T15-26-29+0000.jsonl  tasks-012_gpt-5-mini_1-task-per-option_structured-output_2025-12-28T15-01-12+0000.jsonl  tasks-012_gpt-5-mini_2-tasks-per-option_structured-output_2026-01-10T12-52-06+0000.jsonl  tasks-012_haiku-4-5_1-task-per-option_free-form_2026-01-01T19-19-37+0000.jsonl  tasks-012_haiku-4-5_1-task-per-option_structured-output_2026-01-01T19-04-28+0000.jsonl  tasks-012_haiku-4-5_2-tasks-per-option_structured-output_2026-01-10T17-36-03+0000.jsonl
llmprefs/: .env.example  __main__.py  comparisons.py  load_dataset.py  logs.py  parsing.py  pipeline.py  prompts.py  settings.py  structs.py  task_structs.py
llmprefs/analysis/: option_order.py  outcomes.py  rating.py  structs.py  table.py  task_order.py  visualization.py
llmprefs/api/: anthropic_api.py  base.py  instantiate.py  mock.py  openai_api.py  structs.py
llmprefs/file_io/: load_records.py  save_results.py
llmprefs/scripts/: analyze.py  reparse_responses.py
llmprefs/testing/: factories.py  mock_settings.py
tests/: conftest.py  test_comparisons.py  test_load_dataset.py  test_parsing.py  test_pipeline.py  test_prompts.py
tests/analysis/: test_option_order.py  test_ranking.py  test_rating.py  test_structs.py  test_task_order.py
tests/api/: test_instantiate.py  test_structs.py
tests/file_io/: test_load_records.py
