[project]
name = "llmprefs"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[dependency-groups]
dev = [
    "pyright>=1.1.402",
    "pytest>=8.3.5",
    "ruff>=0.12.2",
]

[tool.pyright]
reportUnusedImport = true
reportUnusedVariable = true
typeCheckingMode = "strict"
venv = ".venv"
venvPath = "."

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]

[tool.ruff]
exclude = [".git", ".venv", "__pycache__"]

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
