[project]
name = "llmprefs"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.10.6",
]

[dependency-groups]
dev = [
    "pyright>=1.1.402",
    "pytest>=8.3.5",
    "ruff>=0.12.2",
]

[tool.pyright]
reportUnusedImport = true
reportUnusedVariable = true
typeCheckingMode = "strict"
venv = ".venv"
venvPath = "."

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]

[tool.ruff]
exclude = [".git", ".venv", "__pycache__"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method
    "D106",  # Missing docstring in public nested class
    "D107",  # Missing docstring in __init__
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
